[gd_scene load_steps=2 format=3 uid="uid://h6dmb7bhhoqx"]

[ext_resource type="Script" path="res://scenes/timer_box.gd" id="1_txemm"]

[node name="TimerBox" type="PanelContainer"]
custom_minimum_size = Vector2(0, 110)
size_flags_vertical = 0
script = ExtResource("1_txemm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="NameLine" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Uus taimer"

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001
show_percentage = false

[node name="TimeLeftLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PauseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "||"

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "X"

[node name="Timer" type="Timer" parent="."]
one_shot = true
